--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
 		"date-fns": "^4.1.0",
 		"leaflet": "^1.9.4",
 		"leaflet.markercluster": "^1.5.3",
-		"sightengine": "^1.3.1",
 		"svelte-sonner": "^1.0.7",
 		"sveltekit-superforms": "^2.29.1",
 		"tailwind-merge": "^3.5.0",
 		"zod": "^4.3.6"
+	},
+	"overrides": {
+		"cookie": "^0.7.0"
 	}
 }
